fixed email link too long, changed to flex-inlne

--- a/Shortpoet/VueClient/src/assets/scss/_variables.scss
+++ b/Shortpoet/VueClient/src/assets/scss/_variables.scss
@@ -52,3 +52,5 @@ $ease-orig:       cubic-bezier(0.42, 0, 0.58, 1);
 $ease-quad:       cubic-bezier(0.455, 0.03, 0.515, 0.955);
 
 $ease-primary:    $ease-orig;
+
+$halo-time:       3s;
